tests/miniJava/neg/005289_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public void int [] java ( ) { return 0 ; } }
